--- a/index.html
+++ b/index.html
@@ -19,8 +19,29 @@
             </div>
         </div>
     </header>
-
-    <main></main>
+    <!-- Main Content -->
+    <main>
+        <section class="testimonial-year">
+            <div class="container">
+                <div class="inner-testimonial">
+                    <div class="testimonial-image">
+                        <img src="images/person.png" alt="Person">
+                    </div>
+                    <div class="testimonial-text">
+                        <h2>My failures of previous year</h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                        <ul>
+                            <li>Contrary to popular belief, is not simply.</li>
+                            <li>Contrary to popular belief.</li>
+                            <li>Contrary to popular , is not simply.</li>
+                            <li>Contrary to popular belief, is not simply.</li>
+                            <li>Contrary to popular simply.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
