Added Plan Area

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </header>
     <!-- Main Content -->
     <main>
+        <!-- Testimonial Area (year) -->
         <section class="testimonial-year">
             <div class="container">
                 <div class="inner-testimonial">
@@ -41,6 +42,38 @@
                 </div>
             </div>
         </section>
+
+        <!-- Plan Area -->
+        <section class="plan-area">
+            <div class="inner-plan container">
+                <h2>My Plans</h2>
+                <div class="plan-container">
+                    <div class="plan-item">
+                        <img src="images/icons/web.png" alt="Web Development">
+                        <h3 class="plan-title">Web Development</h3>
+                        <p class="plan-des">I want to Start</p>
+                    </div>
+                    <div class="plan-item">
+                        <img src="images/icons/js.png" alt="Javascript">
+                        <h3 class="plan-title">Javascript</h3>
+                        <p class="plan-des">I want to learn</p>
+                    </div>
+                    <div class="plan-item">
+                        <img src="images/icons/smoke.png" alt="Smoking Habit">
+                        <h3 class="plan-title">Smoking Habit</h3>
+                        <p class="plan-des">I want to end</p>
+                    </div>
+                    <div class="plan-item">
+                        <img src="images/icons/js.png" alt="e-commerce">
+                        <h3 class="plan-title">E-commerce</h3>
+                        <p class="plan-des">I want to develop</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
     </main>
     <footer></footer>
 </body>
