Added Contact Area

--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
             </div>
         </section>
 
-
+        <!-- Contact US Area -->
+        <section class="contact-area">
+            <div class="inner-contact container">
+                <h2>Always keep a positive mindset</h2>
+                <a href="" class="btn-primary">Call Now</a>
+            </div>
+        </section>
 
     </main>
     <footer></footer>
