--- a/index.html
+++ b/index.html
@@ -79,8 +79,29 @@
                 <a href="" class="btn-primary">Call Now</a>
             </div>
         </section>
-
     </main>
-    <footer></footer>
+
+    <footer class="footer-area">
+        <div class="inner-footer container">
+            <div class="future">
+                <h3>Future</h3>
+                <p class="future-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humor, or randomized words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <div class="social-media">
+                    <img src="images/icons/fb.png" alt="Facebook">
+                    <img src="images/icons/twitter.png" alt="Twitter">
+                    <img src="images/icons/youtube.png" alt="Youtube">
+                </div>
+            </div>
+            <div class="subscribe">
+                <h4>Subscribe</h4>
+                <form>
+                    <input type="email" name="email" id="email" placeholder="Enter your email">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
