--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="inner-testimonial">
                     <div class="testimonial-image">
-                        <img src="images/person.png" alt="Person">
+                        <img src="images/persons.png" alt="Person">
                     </div>
                     <div class="testimonial-text">
                         <h2>My failures of previous year</h2>
