Added Extra Section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
                 <a href="" class="btn-primary">Call Now</a>
             </div>
         </section>
+
+        <!-- Contact US with Email -->
+        <section class="contact-email">
+            <div class="container">
+                <div class="contact-container">
+                    <h2>Contact With Email</h2>
+                    <form class="contact-form">
+                        <div class="name-group">
+                            <input type="text" name="fname" id="fname" placeholder="First Name" required>
+                            <input type="text" name="lname" id="lname" placeholder="Last Name">
+                        </div>
+                        <input type="email" name="email" id="email" placeholder="Email" required>
+                        <textarea name="message" id="message" placeholder="Message here" required></textarea>
+                        <input type="submit" value="Send Email">
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer-area">
