--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 <p>Email : info@gmail.com</p>
                 <p>Phone : 01500 00 00 00</p>
                 <div class="social-media">
-                    <img src="images/icons/fb.png" alt="Facebook">
-                    <img src="images/icons/twitter.png" alt="Twitter">
-                    <img src="images/icons/youtube.png" alt="Youtube">
+                    <a href=""><img src="images/icons/fb.png" alt="Facebook"></a>
+                    <a href=""><img src="images/icons/twitter.png" alt="Twitter"></a>
+                    <a href=""><img src="images/icons/youtube.png" alt="Youtube"></a>
                 </div>
             </div>
             <div class="subscribe">
